# crdyboot

./: .clippy.toml  .deny.toml  .gitignore  .gitmodules  Cargo.toml  DIR_METADATA  OWNERS  README.md  check.sh  navbar.md  project.config  rust-toolchain.toml  x.py
.cargo/: config.toml
.cop/: build.yaml
avb/: Cargo.toml  Makefile  build.rs
avb/src/: avb_ops.rs  avb_sysdeps.rs  bindgen.h  lib.rs
avb/src/libc/: README.md  inttypes.h  stdarg.h  stdbool.h  stddef.h  stdint.h
bootimg/: Cargo.toml  build.rs
bootimg/src/: lib.rs
buildutil/: Cargo.toml
buildutil/src/: lib.rs
cmem/: Cargo.toml
cmem/src/: lib.rs
crdyboot/: CHANGELOG.md  Cargo.toml  README.md  build.py  build.rs  build_ovmf.py  gen_disk.py  run_qemu.py  sbat.csv
crdyboot/src/: avb.rs  boot_image.rs  boot_message.rs  disk.rs  firmware.rs  handover.rs  initramfs.rs  linux.rs  main.rs  result.rs  revocation.rs  sbat.csv  sbat.rs  truncate.rs  vboot_disk.rs  vbpubk.rs
crdyboot/src/firmware/: load_capsules.rs  update_info.rs
crdyboot/test_data/: fwupd-61b65ccc-0116-4b62-80ed-ec5f089ae523-0-0abba7dc-e516-4167-bbf5-4d9d1c739416
crdyboot/test_data/bootimg/: test_boot.img  test_init.img  test_vendor.img
crdyshim/: CHANGELOG.md  Cargo.toml  revocations.csv  sbat.csv
crdyshim/src/: fs.rs  main.rs  relocation.rs  sbat_revocation.rs
docs/: boot_flow.md  chromeos_integration.md  crdyshim.md  logging.md  nx.md  sbat.md  shim.md  test_data.md
enroller/: Cargo.toml
enroller/src/: main.rs
libcrdy/: Cargo.toml  sbat_revocations.csv
libcrdy/src/: arch.rs  disk.rs  entry_point.rs  error.rs  fs.rs  launch.rs  lib.rs  linux.rs  logging.rs  nx.rs  page_alloc.rs  pe.rs  relocation.rs  result.rs  revocation.rs  sbat_revocation.rs  tpm.rs  uefi.rs  uefi_services.rs  util.rs  vbpubk.rs
libcrdy/src/uefi/: uefi_disk.rs
sbat/: Cargo.toml  README.md
sbat/src/: component.rs  csv.rs  generation.rs  lib.rs  metadata.rs  result.rs  revocations.rs  vec.rs
sbat/tests/: example.rs  integration.rs
sbat_gen/: Cargo.toml  README.md
sbat_gen/src/: lib.rs
tools/: Cargo.toml  default.conf
tools/enroller/: Cargo.toml  README.md
tools/enroller/src/: main.rs
tools/src/: arch.rs  build_mode.rs  config.rs  gen_disk.rs  loopback.rs  main.rs  mount.rs  ovmf.rs  pesign.rs  qemu.rs  shim.rs  sign.rs
tools/uefi_test_tool/: Cargo.toml  README.md
tools/uefi_test_tool/src/: launch.rs  main.rs  operation.rs  tpm_v1.rs
vboot/: Cargo.toml  build.rs
vboot/src/: bindgen.h  bridge.c  disk.rs  gpt.rs  kernel.rs  lib.rs  linux.rs  load_kernel.rs  malloc.rs  pe.rs  printf.rs  return_codes.rs  rimpl.rs  stubs.rs
vboot/src/libc/: README.md  ctype.h  endian.h  inttypes.h  stdint.h  stdio.h  stdlib.h  string.h
vboot/test_data/: expected_cmdline.txt  expected_cmdline_with_placeholders.txt  fake_bootloader  fake_kernel.vmlinuz  fake_signed_kernel  gen.py  kernel_commandline.txt  kernel_data_key.pem  kernel_key.pem
vboot/test_keys/: gen_keys.py  kernel_data_key.keyblock  kernel_data_key.pub.pem  kernel_data_key.vbprivk  kernel_data_key.vbpubk  kernel_key.pub.pem  kernel_key.vbprivk  kernel_key.vbpubk
xtask/: Cargo.toml  default.conf  default.toml
xtask/src/: arch.rs  bin_checks.rs  build_mode.rs  config.rs  deploy.rs  gen_disk.rs  gen_keys.rs  loopback.rs  main.rs  mount.rs  network.rs  ovmf.rs  package.rs  qemu.rs  secure_boot.rs  setup.rs  shim.rs  sign.rs  source_checks.rs  swtpm.rs  util.rs  vboot.rs  vm_test.rs
