[workspace]
# This list is altered via sed when building with the ebuild, keep in
# sync with `src_prepare` in `crdyboot-9999.ebuild`.
members = [
    "avb",
    "bootimg",
    "cmem",
    "crdyboot",
    "crdyshim",
    "libcrdy",
    "tools/enroller",
    "tools/uefi_test_tool",
    "vboot",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://chromium.googlesource.com/chromiumos/platform/crdyboot"

[workspace.dependencies]
bindgen = "0.69.4"
cmem = { path = "cmem" }
ed25519-compact = { version = "1.0.0", default-features = false }
libcrdy = { path = "libcrdy" }
log = { version = "0.4.0", default-features = false }
mockall = "0.12.1"
object = { version = "0.31.1", default-features = false, features = ["pe", "read_core", "unaligned"] }
printf-compat = { version = "0.1.1", default-features = false }
sbat = "0.5.0"
sha2 = { version = "0.10.6", default-features = false }
uefi = { version = "0.32.0", default-features = false, features = ["alloc"] }
uefi-raw = "0.8.0"
zerocopy = { version = "0.7.32", features = ["derive"] }

[profile.release]
overflow-checks = true
