[package]
name = "avb"
version = "1.0.0"

edition.workspace = true
# MIT for libavb, BSD3 for sha512impl
license = "MIT AND BSD-3-Clause"
repository.workspace = true

[dependencies]
cmem.workspace = true
log.workspace = true
printf-compat.workspace = true

[build-dependencies]
bindgen.workspace = true
buildutil.workspace = true
