[package]
name = "crdyboot"
version = "1.0.2"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libcrdy.workspace = true
log.workspace = true
object.workspace = true
uefi.workspace = true
vboot = { path = "../vboot" }

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["logger", "global_allocator", "panic_handler"] }

[dev-dependencies]
object = { workspace = true, features = [ "write_core" ] }
