[package]
name = "crdyboot"
version = "1.0.3"

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
android = []
# Temporary feature flag to control whether firmware updates are allowed.
firmware_update = []
# Feature flag to gate flexor support.
flexor = []

[dependencies]
ext4-view = "0.4.2"
libcrdy.workspace = true
log.workspace = true
object.workspace = true
uefi.workspace = true
vboot = { path = "../vboot" }
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["logger", "global_allocator", "panic_handler"] }

[dev-dependencies]
libcrdy = { workspace = true, features = ["test_util"] }
mockall.workspace = true
object = { workspace = true, features = [ "write_core" ] }
uefi-raw.workspace = true
