[package]
name = "crdyboot"
version = "1.0.5"

edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
android = ["dep:avb", "dep:bootimg"]

[dependencies]
avb = { path = "../avb", optional = true }
bootimg = { path = "../bootimg", optional = true }
ext4-view = "0.9.1"
libcrdy.workspace = true
log.workspace = true
object.workspace = true
uefi.workspace = true
uefi-raw.workspace = true
vboot = { path = "../vboot" }
sha2.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["global_allocator", "panic_handler"] }

[dev-dependencies]
libcrdy = { workspace = true, features = ["test_util"] }
mockall.workspace = true
object = { workspace = true, features = [ "write_core" ] }
uefi-raw.workspace = true
