# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

[package]
name = "crdyshim"
version = "1.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libcrdy = { path = "../libcrdy" }
uefi.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi-services.workspace = true
