# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

[package]
name = "crdyshim"
version = "1.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# TODO(nicholasbishop): add this to deps in rust_crates
ed25519-compact.workspace = true
libcrdy = { path = "../libcrdy" }
log.workspace = true
object.workspace = true
sbat = { version = "0.5.0", features = ["alloc"] }
uefi.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi-services.workspace = true

[dev-dependencies]
mockall = "0.11.4"
