[package]
name = "enroller"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
log = "0.4"

# TODO: once a new release comes out that includes 48e958d89 switch these two
# deps to crates.io.
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git", features = ["exts", "ignore-logger-errors"] }
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git" }

[patch.crates-io]
# This is needed to fix uefi-services' dep on uefi
uefi = { git = "https://github.com/rust-osdev/uefi-rs.git" }
