[package]
name = "libcrdy"
version = "1.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
log.workspace = true
object.workspace = true
uefi.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["logger", "global_allocator", "panic_handler"] }
