[package]
name = "vboot"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[dependencies]
log = "0.4.0"
printf-compat = { version = "0.1.1", default-features = false }
uguid = "1.0.0"

[dev-dependencies]
regex = "1.6.0"
simple_logger = { version = ">=1.13.0", default-features = false }

[build-dependencies]
bindgen = { version = "0.60.1", default-features = false, features = ["logging", "runtime", "which-rustfmt"] }
