[package]
name = "vboot"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
log = "0.4.0"
printf-compat = { version = "0.1.1", default-features = false }
uguid = "2.0.0"

[dev-dependencies]
regex = "1.6.0"

[build-dependencies]
bindgen = "0.63.0"
