[package]
name = "vboot"
version = "1.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cmem.workspace = true
log.workspace = true
printf-compat = { version = "0.1.1", default-features = false }
uguid = "2.0.0"

[build-dependencies]
bindgen = "0.69.4"
