[package]
name = "xtask"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.57"
argh = "0.1.7"
camino = { version = "1.0.9", features = ["serde1"] }
command-run = "1.1.1"
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
fs-err = "2.7.0"
gpt_disk_types = { version = "0.15.0", features = ["std"] }
gptman = { version = "1.0.0", default-features = false }
object = { workspace = true, features = ["std"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.0"
tempfile = "3.4.0"
