[package]
name = "xtask"
publish = false
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.57"
base64 = "0.21.3"
camino = "1.0.9"
clap = { version = "4.4.3", default-features = false, features = ["std", "help", "usage", "derive"] }
command-run = "1.1.1"
ed25519-compact = { workspace = true, features = ["pem", "std"] }
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
fs-err = "2.7.0"
gpt_disk_types = { version = "0.16.0", features = ["std"] }
gptman = { version = "1.0.0", default-features = false }
object = { workspace = true, features = ["std"] }
sbat = { workspace = true, features = ["std"] }
serde = "1.0.137"
sha2 = "0.10.7"
tempfile = "3.4.0"
