[package]
name = "enroller"
publish = false
version = "0.0.0"

edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libcrdy = { path = "../../libcrdy" }
log.workspace = true
uefi.workspace = true

[target.'cfg(target_os = "uefi")'.dependencies]
uefi = { workspace = true, features = ["logger", "global_allocator", "panic_handler"] }

[features]
shim_verbose = []
